feat(ads): inline fixed horizontal AdSense slots after 2nd, 4th category and end with CLS-safe frames

--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
     <div class="disclaimer" data-i18n="info.short.credits">Proyecto hecho por fans para fans. Team Cherry no participa.</div>
   </div>
 </div>
+<script type="module" src="./src/js/ads-inline.js"></script>
 <script type="module" src="./src/js/main.js"></script>
 <script>
 // Diagnostics: warn if opened as file:// or images failing
