feat: reintroduce simple AdSense (single mid-page slot)

--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
     gtag('config', 'G-3ZD7H8X2CE', { anonymize_ip: true });
   </script>
 
+  <!-- Google AdSense (single inclusion) -->
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9707168065012640" crossorigin="anonymous"></script>
+
   <!-- Critical CSS mínimo; estilos completos en /assets/app.css -->
   <style>
     :root { --bg:#0d0f12; --panel:#14181d; --panel-alt:#1c232b; --fg:#f5f7fa; --accent:#4fb3ff; --accent-grad:linear-gradient(90deg,#4fb3ff,#00ffa8); --muted:#6e7b88; --border:#242d36; --radius:8px; --focus:#ffe28a; --danger:#ff4f4f; --silksong-gold-grad:linear-gradient(90deg,#cf9a28,#e8c869,#f5e6b4,#e0bb55); font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif; }
