--- a/privacy.html
+++ b/privacy.html
@@ -18,7 +18,7 @@
     <h2 style="font-size:.95rem;margin-top:1.6rem">Analytics</h2>
     <p>We use Google Analytics 4 (basic configuration) to understand aggregated usage (page views, language selection patterns). IP anonymization is handled by Google infrastructure. No custom user identifiers are set.</p>
   <h2 style="font-size:.95rem;margin-top:1.6rem">Advertising</h2>
-  <p>No se cargan scripts de publicidad ni se muestran anuncios en esta versión. El sitio es 100% libre de anuncios y sólo utiliza almacenamiento local para tu progreso.</p>
+  <p>This site displays a limited Google AdSense unit to help cover hosting/domain costs. Ads are loaded from Google and may use cookies or local storage subject to your regional settings. Blocking ads will not break core functionality.</p>
     <h2 style="font-size:.95rem;margin-top:1.6rem">Local Data Removal</h2>
     <p>Use the Reset button on the main page or clear your browser storage to remove all locally stored checklist progress.</p>
     <h2 style="font-size:.95rem;margin-top:1.6rem">Contact</h2>
