feat: add multiplex AdSense unit before footer

--- a/index.html
+++ b/index.html
@@ -188,6 +188,15 @@
 <main>
   <div id="categories" class="categories" aria-live="polite"></div>
 </main>
+<!-- Multiplex Ad (autorelaxed) -->
+<div class="ad-multiplex" id="ad-multiplex-end">
+  <ins class="adsbygoogle"
+       style="display:block"
+       data-ad-format="autorelaxed"
+       data-ad-client="ca-pub-9707168065012640"
+       data-ad-slot="7428766249"></ins>
+  <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+</div>
 <footer style="padding:1rem;font-size:.7rem;color:#6e7b88;text-align:center;border-top:1px solid #242d36;background:#0f1215;">
    <p style="margin:0;">Silksong community project</p>
 </footer>
